--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Xmas Snow 2016</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap" rel="stylesheet">
+
     <style>
         * {
             margin: 0;
@@ -16,6 +21,8 @@
             background-repeat: no-repeat;
             background-repeat: no-repeat;
             background-position: center center;
+            font-family: 'Dancing Script', cursive;
+            
         }
     </style>
 </head>
@@ -28,9 +35,8 @@
         var canvas = document.querySelector('#snowField');
         var ctx = canvas.getContext('2d');
 
-        canvas.width = window.innerWidth;
-        canvas.height = window.innerHeight;
-
+        canvas.width = window.innerWidth - 20;
+        canvas.height = window.innerHeight -20;
         var totalSnow = 100;
 
         function Snow() {
@@ -74,9 +80,9 @@
             ctx.drawImage(imgTree, 0, canvas.height - imgTree.height / 4 + 90, 500, 550);
             ctx.drawImage(imgLight, canvas.width - imgLight.width / 3, 0, imgLight.width / 4, imgLight.height / 4);
             // ctx.fontFamily = 'Segoe UI, sans-serif';
-            ctx.font = '48px Segoe UI, sans-serif';
-            ctx.fillText('KODEMATE & LAPTRINH.IO', 500, 350);
-            ctx.fillText('Wish you all a Merry Christmas!', 500, 450);
+            ctx.font = '50px Dancing Script, cursive';
+            ctx.fillText('Thanh Thảo 15-7', 500, 350);
+            ctx.fillText('Hope all the best will come to you', 500, 450);
             for (var i = 0; i < snows.length; i++) {
                 snows[i].update();
             }
