--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         var canvas = document.querySelector('#snowField');
         var ctx = canvas.getContext('2d');
 
-        canvas.width = window.innerWidth - 20;
-        canvas.height = window.innerHeight -20;
+        canvas.width = window.innerWidth ;
+        canvas.height = window.innerHeight;
         var totalSnow = 100;
 
         function Snow() {
