--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Xmas Snow 2016</title>
+ 
+    <title>Gif for you</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="icon" type="image/png" href="https://scontent.fhan14-2.fna.fbcdn.net/v/t1.6435-1/p100x100/135015636_975381832987070_8205200608264161896_n.jpg?_nc_cat=102&ccb=1-3&_nc_sid=7206a8&_nc_ohc=Bhlpv6A-ZbEAX_tx_Vf&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.fhan14-2.fna&oh=881933a2634c6905782871a64208aa1b&oe=61224FC5"/>
+    <link rel="icon" type="image/png" href="https://scontent.fhan14-2.fna.fbcdn.net/v/t1.6435-1/p100x100/135015636_975381832987070_8205200608264161896_n.jpg?_nc_cat=102&ccb=1-3&_nc_sid=7206a8&_nc_ohc=Bhlpv6A-ZbEAX_tx_Vf&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.fhan14-2.fna&oh=881933a2634c6905782871a64208aa1b&oe=61224FC5"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap"
